--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -3,13 +3,13 @@
 
 <div class="card-group" id="mainMenu">
 	<div class="card">
-		<a href="./learn/"><h1 class="card-title text-center">Learn</h1></a>
+		<a href="./learn.php"><h1 class="card-title text-center">Learn</h1></a>
 	</div> <!-- card -->
 	<div class="card">
-		<a href="./explore/"><h1 class="card-title text-center">Explore</h1></a>
+		<a href="./explore.php"><h1 class="card-title text-center">Explore</h1></a>
 	</div> <!-- card -->
 	<div class="card">
-		<a href="./play/"><h1 class="card-title text-center">Play</h1></a>
+		<a href="./play.php"><h1 class="card-title text-center">Play</h1></a>
 	</div> <!-- card -->
 </div> <!-- card-group -->
 {% endblock %}
