--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
+.content {
+	margin: 10px 0px 60px 0px;
+}
+
 .footer {
-    position: absolute;
+	position: fixed;
     bottom: 0;
     width: 100%;
     height: 60px;
@@ -15,3 +19,11 @@
 	color: white;
 }
 
+.card-img-top {
+    width: 100%;
+    object-fit: cover;
+}
+
+.card {
+	margin: 10px 10px 10px 10px;
+}
