--- a/templates/transition.html
+++ b/templates/transition.html
@@ -2,11 +2,10 @@
 {% block content %}
 <div class="jumbotron jumbotron-fluid">
 	<div class="container">
-		<h4 class="display-4">An error occurred</h4>
-		<p>{{ error_message }}</p>
+		<h4 class="display-4">{{ message }}</h4>
 		<a class="btn btn-primary" type="button" href="{{ return_page_url }}">
 			{{ return_button_text }}
 		</a>
-	</div>
+    </div>
 </div> <!-- jumbotron -->
 {% endblock %}
